  * [armhf, arm64] Backport devicetree for enabling support for the
    Raspberry PI 3 A+

  [ Salvatore Bonaccorso ]
  * ixgbe: Fix secpath usage for IPsec TX offload (Closes: #930443)
  * ipv4: Return -ENETUNREACH if we can't create route but saddr is valid
    (Closes: #945023)
  * [x86] KVM: x86: introduce is_pae_paging (Regression in 4.19.77)

  [ Bastian Blank ]
  * [amd64/cloud-amd64] Re-enable RTC drivers. (closes: #931341)

  [ Noah Meyerhans ]
  * drivers/net/ethernet/amazon: Backport driver fixes from Linux 5.4
    (Closes: #941291)
  * Bump ABI to 7

  [ Ben Hutchings ]
  * debian/bin/genpatch-rt: Fix series generation from git
  * [rt] Update to 4.19.82-rt30:
    - Drop changes in "fs/dcache: disable preemption on i_dir_seq's write side"
      that conflict with "Fix the locking in dcache_readdir() and friends"
    - Rewrite "fs/aio: simple simple work" using kthread_work
    - Rewrite "thermal: Defer thermal wakups to threads" using kthread_work
    - Rewrite "block: blk-mq: move blk_queue_usage_counter_release() into
      process context" using kthread_work
    - workqueue: rework

  [ Benjamin Poirier ]
  * tools/perf: Add python3 support to scripts (Closes: #944641)

 -- Romain Perier <romain.perier@gmail.com>  Wed, 28 Aug 2019 13:28:09 +0200

linux (4.19.67-2+deb10u2) buster-security; urgency=high

  * [x86] Add mitigation for TSX Asynchronous Abort (CVE-2019-11135):
    - KVM: x86: use Intel speculation bugs and features as derived in generic
      x86 code
    - x86/msr: Add the IA32_TSX_CTRL MSR
    - x86/cpu: Add a helper function x86_read_arch_cap_msr()
    - x86/cpu: Add a "tsx=" cmdline option with TSX disabled by default
    - x86/speculation/taa: Add mitigation for TSX Async Abort
    - x86/speculation/taa: Add sysfs reporting for TSX Async Abort
    - kvm/x86: Export MDS_NO=0 to guests when TSX is enabled
    - x86/tsx: Add "auto" option to the tsx= cmdline parameter
    - x86/speculation/taa: Add documentation for TSX Async Abort