@@ -1532,6 +1532,8 @@ linux (4.19.84-1) UNRELEASED; urgency=medium
   * ipv4: Return -ENETUNREACH if we can't create route but saddr is valid
     (Closes: #945023)
   * [x86] KVM: x86: introduce is_pae_paging (Regression in 4.19.77)
+  * [rt] Refresh 0011-sched-fair-Robustify-CFS-bandwidth-timer-locking.patch
+    (context changes in 4.19.84)
 
   [ Bastian Blank ]
   * [amd64/cloud-amd64] Re-enable RTC drivers. (closes: #931341)
